refactor(worker): add armonik-worker-domain dependency and move internal classes